@@ -1,3 +1,8 @@
+2008-07-25 Roman
+- /SYS/CntrNode: Group clear of modify status function is added.
+- FIX:/UI/VCAEngine: Two loading VCA data is prevented.
+
+
 2008-07-16 Maxim
 - FIX:/UI/Vision: Copy function for primitive ElFigure is fixed.
 - /UI/Vision: Level(highest or lowest) configuration is added for primitive ElFigure.
